15 de agosto no pc local

--- a/src/noticia/noticia.css
+++ b/src/noticia/noticia.css
@@ -56,6 +56,8 @@
 }
 .NotGeral {
     text-align: center;
+    padding: 10px;
+    border: 5px solid rgb(175, 175, 175);
 }
 .NotGeral h5{
     color: black;
