primeiro de 2023, dia 31 de janeiro

--- a/src/reitoria/reitoria.css
+++ b/src/reitoria/reitoria.css
@@ -9,6 +9,9 @@
     font-size: 40px;
     text-decoration: underline;
 }
+.PerfilReitoria h5{
+    font-style: italic;
+}
 .ImgStyle{
     height: min-content;
 }
